1.6-0
-----
Argument 'projection.year' in all map functions changed to 'year'.

A wildcard 'XXX' can be passed in the 'main' argument of all the *.all plotting functions. It is replaced by the corresponding country name.

Argument 'verbose.iter' added to run.tfr.mcmc.

Argument 'data.args' added to tfr.map.

1.5-1 (03/29/2012)
-----
Example data reduced from three chains of 50 iterations each to two chains of 30 iterations each in order to make the package smaller.

Rename coda.mcmc.list to coda.list.mcmc in order not to intervene with the S3 method coda.mcmc.

Arguments typical.trajectory, col, lwd, show.legend added to tfr.trajectories.plot.

Function tfr.GoF.dl added to compute goodness of fit.

Argument 'predictive.distr' addedto the DLcurve.plot function to plot the double logistic curves including the error term.

1.5-0 (11/17/2011)
-----
Performance improved in two ways:
1. MCMCs are converted to environments (instead of being lists), so that they are not copied every time.
2. A few functions implemented in C.

1.4-2 (10/13/2011)
-----
Minor changes in get.prediction.summary.data.

Internal changes in the function for plotting world maps.

New function called get.countries.table added.

1.4-1 (07/15/2011)
-----   
Citation and reference to a JSS	article	added.
	
1.4-0 (05/06/2011)
-----
Official UN WPP 2010 data added to the package and the default for argument wpp.year set to 2010. 

The rho and sigmaAR1 arguments of the tfr.predict function replaced by estimates based on the new data.

Removed argument html.file from the function tfr.map.gvis, since the new version of the googleVis
package (0.2.4) now creates html files automatically.

Added item 'iter.incr' to the 'auto.conf' argument in run.tfr.mcmc, to distinguish between 
the length of the initial simulation and the incrementals in case it did not converge.

1.3-1 (03/15/2011)
-----
Test data and locations from WPP 2010 removed.

1.3-0 (03/11/2011)
-----
Lines in tfr.trajectories.plot made thicker.
